# snap-brain

./: .gitignore
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: ingestion.py  memories.py  profile.py  reflection.py  search.py
backend/app/core/: config.py
backend/app/db/: __init__.py  supabase.py
backend/app/db/repositories/: __init__.py  ingestion_jobs.py  memory_chunks.py  memory_extractions.py  memory_items.py  profiles.py  user_memory_patterns.py
backend/app/schemas/: ingestion.py  memory.py  openai.py  profile.py  search.py
backend/app/services/ingestion/: __init__.py  chunker.py  normalizer.py  pdf.py  pipeline.py
backend/app/services/openai/: __init__.py  client.py  embeddings.py  query_expansion.py  structured_outputs.py  vision.py
backend/app/services/retrieval/: __init__.py  hybrid_search.py
backend/app/services/storage/: supabase_storage.py
backend/app/workers/: __init__.py  reflection_worker.py
backend/scripts/: recall_benchmark.py  seed_memory_dataset.py  verify_recall_e2e.py
docs/: architecture.md
frontend/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: pwa-service-worker.tsx
frontend/lib/: api.ts  i18n-server.ts  i18n.ts  memory-adapter.ts  memory-groups.ts  recall-session-server.ts  recall-session.ts  server-api.ts  types.ts  utils.ts
frontend/public/: manifest.json  sw.js
(+31 files in other folders)
