[project]
name = "snapbrain-backend"
version = "0.1.0"
description = "FastAPI AI context engine for SnapBrain memory ingestion."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "openai>=1.0.0",
  "supabase>=2.6.0",
  "pypdf>=4.3.0",
  "pillow>=10.4.0",
  "reportlab>=4.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
